--- a/src/pages/CGeoCode.page
+++ b/src/pages/CGeoCode.page
@@ -1,5 +1,5 @@
 <apex:page controller="CGeoCode" action="{!init}" sidebar="False" tabStyle="GeoCode__tab"> 
-    <script src="http://maps.google.com/maps?file=api&v=2&key={!GKey}" type="text/javascript"></script>
+    <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key={!GKey}&sensor=false"></script>
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <apex:includeScript value="/soap/ajax/17.0/connection.js"/>
     
