--- a/src/pages/FindNearbyMap.page
+++ b/src/pages/FindNearbyMap.page
@@ -5,7 +5,7 @@
 <script src="{!URLFOR($Resource.jqTable)}" type="text/javascript" ></script>
 <script src="{!URLFOR($Resource.fixedTHeader)}" type="text/javascript" ></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.js" type="text/javascript"></script>
-<script src="http://maps.google.com/maps?file=api&v=2&key={!GKey}&sensor=true" type="text/javascript"></script>
+<script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key={!GKey}&sensor=false"></script>
 <style type='text/css'>
   .Filter{
         background:url("/img/alohaSkin/grid_headerbg.gif") repeat-x scroll 0 bottom #FFFFFF;
