Updated Gmap2 --> google.maps.Map

--- a/src/pages/AGeoCode.page
+++ b/src/pages/AGeoCode.page
@@ -25,7 +25,7 @@
         /*Initialize the Map and Geocoder*/
         var geocoder = null;
         var map = null;
-        map = new GMap2(document.getElementById('{!$Component.map_div}'));
+        map = new google.maps.Map(document.getElementById('{!$Component.map_div}'));
         geocoder = new GClientGeocoder();
         map.setCenter(new GLatLng(37.4419, -122.1419), 1);
         
