--- a/src/pages/CGeoCode.page
+++ b/src/pages/CGeoCode.page
@@ -1,5 +1,5 @@
 <apex:page controller="CGeoCode" action="{!init}" sidebar="False" tabStyle="GeoCode__tab"> 
-    <script src="http://maps.google.com/maps?file=api&v=2&key={!GKey}" type="text/javascript"></script>
+    <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key={!GKey}&sensor=false"></script>
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <apex:includeScript value="/soap/ajax/17.0/connection.js"/>
     
@@ -23,9 +23,9 @@
         /*Initialize the Map and Geocoder*/
         var geocoder = null;
         var map = null;
-        map = new GMap2(document.getElementById('{!$Component.map_div}'));
-        geocoder = new GClientGeocoder();
-        map.setCenter(new GLatLng(37.4419, -122.1419), 1);
+        map = new google.maps.Map(document.getElementById('{!$Component.map_div}'));
+        geocoder = new google.maps.Geocoder();
+        map.setCenter(new google.maps.LatLng(37.4419, -122.1419), 1);
         
         
         /*If I have a value keep going*/ 
@@ -43,7 +43,7 @@
                         var accuracy = place.AddressDetails.Accuracy;
                        
                        if(accuracy>=6){
-                         var point = new GLatLng(place.Point.coordinates[1],place.Point.coordinates[0]);
+                         var point = new google.maps.LatLng(place.Point.coordinates[1],place.Point.coordinates[0]);
                          var marker = new GMarker(point);
                          map.setCenter(point, 13);
                          map.addOverlay(marker);
