--- a/src/pages/FindNearbyMap.page
+++ b/src/pages/FindNearbyMap.page
@@ -5,7 +5,7 @@
 <script src="{!URLFOR($Resource.jqTable)}" type="text/javascript" ></script>
 <script src="{!URLFOR($Resource.fixedTHeader)}" type="text/javascript" ></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.js" type="text/javascript"></script>
-<script src="http://maps.google.com/maps?file=api&v=2&key={!GKey}&sensor=true" type="text/javascript"></script>
+<script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key={!GKey}&sensor=false"></script>
 <style type='text/css'>
   .Filter{
         background:url("/img/alohaSkin/grid_headerbg.gif") repeat-x scroll 0 bottom #FFFFFF;
@@ -568,7 +568,7 @@
     */
     function initializeMap(){
         //Set the div
-        map= new GMap2(document.getElementById('{!$Component.map_div}'));
+        map= new google.maps.Map(document.getElementById('{!$Component.map_div}'));
        
        //Set the Icon Image
        // AIcon.image= baseUrl+'blue_MarkerA.png';
@@ -576,7 +576,7 @@
         
         //Add a map control
         var mapControl = new GMapTypeControl();
-        map.setCenter(new GLatLng(0, 0), 2);
+        map.setCenter(new google.maps.LatLng(0, 0), 2);
         map.setUIToDefault();
         //map.addControl(mapControl);
         
@@ -624,7 +624,7 @@
         
         this.myIcon = new GIcon(G_DEFAULT_ICON);
         this.whichLetterIcon = String.fromCharCode(this.originalMarker.charCodeAt(0) + (index % 26));
-        this.point = new GLatLng(lat,lon);
+        this.point = new google.maps.LatLng(lat,lon);
         this.DirectionURL = 'http://www.maps.google.com?q='+this.address+'\'/';
         this.mapOption = {icon:this.myIcon};
         
@@ -802,7 +802,7 @@
  */
 (function () {
   /*jslint browser:true */
-  /*global GMap2,GMarker,GEvent */
+  /*global google.maps.Map,GMarker,GEvent */
   var defaultStyle = {
     tabBar: {
       background: '#F4F4F4 none repeat scroll 0 0',
@@ -1015,7 +1015,7 @@
     }
   };
  
-  GMap2.prototype.openMaxContentTabs = function (latlng, minNode, sumNode, tabs, opt_maxOptions) {
+  google.maps.Map.prototype.openMaxContentTabs = function (latlng, minNode, sumNode, tabs, opt_maxOptions) {
     var max = this.getTabbedMaxContent();
     var opts = opt_maxOptions || {};
     max.initialize_(sumNode, tabs, opts);
@@ -1038,11 +1038,11 @@
       });
     }
   };
-  GMap2.prototype.openMaxContentTabsHtml = function (latlng, html, summary, tabs, opt_maxOptions) {
+  google.maps.Map.prototype.openMaxContentTabsHtml = function (latlng, html, summary, tabs, opt_maxOptions) {
     this.openMaxContentTabs(latlng, createEl('div', null, html), createEl('div', null, summary), tabs, opt_maxOptions);
   };
 
-  GMap2.prototype.getTabbedMaxContent = function () {
+  google.maps.Map.prototype.getTabbedMaxContent = function () {
     this.maxContent_  = this.maxContent_ || new TabbedMaxContent(this.getInfoWindow());
     return this.maxContent_;
   };
