--- a/src/pages/LGeoCode.page
+++ b/src/pages/LGeoCode.page
@@ -1,59 +1,76 @@
-<apex:page controller="LGeoCode" action="{!init}" sidebar="False" tabStyle="GeoCode__tab" > 
-    <script src="http://maps.google.com/maps?file=api&v=2&key={!GKey}" type="text/javascript"></script>
-    <script type="text/javascript" src="http://www.google.com/jsapi"></script>
-    <apex:includeScript value="/soap/ajax/17.0/connection.js"/>
-    
-    <apex:SectionHeader title="Locating Leads... Don't close this window." subtitle="Geo Coding">
-        <apex:outputPanel id="map_div" layout="block" style="width:575px; height:315px; border:thin solid #236FBD ;"></apex:outputPanel>
-    </apex:SectionHeader>
+<apex:page controller="LGeoCode" action="{!init}" sidebar="False"
+	tabStyle="GeoCode__tab">
+	<script type="text/javascript"
+		src="//maps.googleapis.com/maps/api/js?key={!GKey}&sensor=false"></script>
+	<script type="text/javascript" src="http://www.google.com/jsapi"></script>
+	<apex:includeScript value="/soap/ajax/17.0/connection.js" />
+
+	<apex:SectionHeader title="Locating Leads... Don't close this window."
+		subtitle="Geo Coding">
+		<apex:outputPanel id="map_div" layout="block"
+			style="width:575px; height:315px; border:thin solid #236FBD ;"></apex:outputPanel>
+	</apex:SectionHeader>
 
 
-    <apex:form >
-        <apex:actionFunction name="result" action="{!result}" reRender="outer">
-            <apex:param name="Lat" value="" />
-            <apex:param name="Lon" value="" />
-            <apex:param name="Stat" value="" /> 
-            <apex:param name="Acc" value="" />
-        </apex:actionFunction>  
-        <apex:actionFunction name="doneMsg" action="{!done}"> </apex:actionFunction>
-    </apex:form>
-    
- <apex:outputpanel id="outer" > 
-    <script type="text/javascript">
+	<apex:form >
+		<apex:actionFunction name="result" action="{!result}" reRender="outer">
+			<apex:param name="Lat" value="" />
+			<apex:param name="Lon" value="" />
+			<apex:param name="Stat" value="" />
+			<apex:param name="Acc" value="" />
+		</apex:actionFunction>
+		<apex:actionFunction name="doneMsg" action="{!done}">
+		</apex:actionFunction>
+	</apex:form>
+
+	<apex:outputpanel id="outer">
+		<script type="text/javascript">
         /*Initialize the Map and Geocoder*/
         var geocoder = null;
         var map = null;
-        map = new GMap2(document.getElementById('{!$Component.map_div}'));
-        geocoder = new GClientGeocoder();
-        map.setCenter(new GLatLng(37.4419, -122.1419), 1);
+        var markersArray = [];
+        map = new google.maps.Map(document.getElementById('{!$Component.map_div}'));
+        geocoder = new google.maps.Geocoder();
+        map.setCenter(new google.maps.LatLng(37.4419, -122.1419), 1);
+        
+        
+        function clearOverlays() {
+           for (var i = 0; i < markersArray.length; i++ ) {
+    	      markersArray[i].setMap(null);
+           }
+        }
         
         
         /*If I have a value keep going*/ 
         if('{!continue}' == 'T'){
          if (geocoder) {
             setTimeout("1+1",650);
-            geocoder.getLocations( '{! JSENCODE(Address) }',
-                function(response) {
-                    map.clearOverlays();
-                    
-                   //if it was located, with a good accuracy
-                   if(response.Status.code == G_GEO_SUCCESS)
-                   {
-                        var place = response.Placemark[0];
+            geocoder.geocode( {address: '{! JSENCODE(Address) }'},
+                function(response, status) {
+                                  
+                   clearOverlays();
+
+                   if (status == google.maps.GeocoderStatus.OK) {
+			            alert("Geocode was  successful : " + status);
+			         /*
+			            var place = response.Placemark[0];
                         var accuracy = place.AddressDetails.Accuracy;
-                       
-                       if(accuracy>=6){
-                         var point = new GLatLng(place.Point.coordinates[1],place.Point.coordinates[0]);
+                        
+                        if(accuracy>=6){
+                         var point = new google.maps.LatLng(place.Point.coordinates[1],place.Point.coordinates[0]);
                          var marker = new GMarker(point);
+                         markersArray.push(marker);
                          map.setCenter(point, 13);
                          map.addOverlay(marker);
                          marker.openInfoWindowHtml('{! JSENCODE(LName) }');
                         }
                         result(place.Point.coordinates[1],place.Point.coordinates[0],response.Status.code,place.AddressDetails.Accuracy);
-                   }
-                   else{
-                    result('0.0','0.0',response.Status.code,'0.0');
-                   }
+			           */
+			      } else {
+			        alert("Geocode was not successful for the following reason: " + status);
+			         //result('0.0','0.0',response.Status.code,'0.0');
+			      }
+                   
                }
            );
        }
@@ -61,9 +78,9 @@
     else{
         doneMsg();
     }   
-    </script> 
+    </script>
 
-</apex:outputpanel>
+	</apex:outputpanel>
 
 
 </apex:page>
